--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 
 ---
-<footer transition:animate="none" class="py-3 px-2 text-center text-white bg-purple-900">
+<footer transition:animate="none" class="flex justify-center items-center h-20 py-3 px-2 text-center text-white bg-purple-900">
     <span>Esta es una fanpage, todos los derechos pertenecen a sus respectivos autores</span>
 </footer>
