--- a/src/components/Nation.astro
+++ b/src/components/Nation.astro
@@ -19,7 +19,7 @@ if (!images[nacion]) throw new Error(`"${nacion}" No se encontró la imagen"`);
         <a href={href} target="_self" class=" flex gap-2 justify-center items-center group">
             <div class="relative">
                 <Picture src={images[nacion]()} alt={titulo} loading='lazy' class='size-52 group-hover:-translate-x-4 transition-all duration-300'/>
-                <h1 class="text-xl max-sm:text-center sm:-z-10 sm:opacity-0 font-medium sm:absolute top-1/2 left-1/4 group-hover:left-full group-hover:opacity-100 group-hover:z-auto transition-all duration-300">{titulo}</h1>
+                <h1 class="text-3xl text-gray-200 max-sm:text-center sm:-z-10 sm:opacity-0 font-medium sm:absolute top-[40%] left-1/4 group-hover:left-full group-hover:opacity-100 group-hover:z-auto transition-all duration-300">{titulo}</h1>
             </div>
         </a>
     </div>
