--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,10 +57,10 @@ import Nation from '../components/Nation.astro';
 	</Seccion>
 	<Seccion ancla='Naciones' title='Naciones'>
 		<div class="pt-4">
+			<Nation titulo='Planetune' href='/world/Planetune' nacion="/src/imgs/logos/Planetune_Logo.png" bg="/src/imgs/backgrounds/planetune_bg.png" transition:name='planetune'/>
 			<Nation titulo='Lastation' href='/world/Lastation' nacion="/src/imgs/logos/Lastation_Logo.png" bg="/src/imgs/backgrounds/lastation_bg.jpg" transition:name='lastation'/>
-			<Nation titulo='Planetune' href='#' nacion="/src/imgs/logos/Planetune_Logo.png" bg="/src/imgs/backgrounds/planetune_bg.png"/>
-			<Nation titulo='Leambox' href='#' nacion="/src/imgs/logos/Leambox_Logo.png" bg="/src/imgs/backgrounds/leambox_bg.png"/>
-			<Nation titulo='Lowee' href='#' nacion="/src/imgs/logos/Lowee_Logo.png" bg="/src/imgs/backgrounds/lowee_bg.png"/>
+			<Nation titulo='Leambox' href='/world/Leambox' nacion="/src/imgs/logos/Leambox_Logo.png" bg="/src/imgs/backgrounds/leambox_bg.png" transition:name='leambox'/>
+			<Nation titulo='Lowee' href='/world/Lowee' nacion="/src/imgs/logos/Lowee_Logo.png" bg="/src/imgs/backgrounds/lowee_bg.png" transition:name='lowee'/>
 		</div>
 	</Seccion>
 	<Seccion ancla='Juegos' title='Entregas'>
