--- a/src/pages/world/Leambox.astro
+++ b/src/pages/world/Leambox.astro
@@ -2,12 +2,12 @@
 import CharacterNation from "../../components/CharacterNation.astro";
 import NationLayout from "../../layouts/NationLayout.astro";
 ---
-<NationLayout title="Lastation" fondo="/src/imgs/backgrounds/lastation_bg.jpg">
+<NationLayout title="Lastation" fondo="/src/imgs/backgrounds/leambox_bg.png">
     <div class="flex flex-wrap sm:gap-3 justify-center items-center text-gray-200 max-sm:mb-4">
         <figure class="size-52">
-            <img src="/src/imgs/logos/Lastation_Logo.png" alt="Lastation logo" class="w-full">
+            <img src="/src/imgs/logos/Leambox_Logo.png" alt="Lastation logo" class="w-full">
         </figure>
-        <h1 class="text-3xl font-medium">Lastation</h1>
+        <h1 class="text-3xl font-medium">Leambox</h1>
     </div>
     <section class="bg-black bg-opacity-30 shadow-top text-gray-300 p-3">
         <article class="max-w-6xl m-auto">
@@ -21,38 +21,18 @@ import NationLayout from "../../layouts/NationLayout.astro";
     <section class="bg-black bg-opacity-30 shadow-top text-gray-200 mt-2 p-3">
         <article class=" max-w-6xl m-auto">
             <h1 class="my-2 border-b border-cyan-600 text-3xl text-cyan-600">Guardián de la nación</h1>
-            <CharacterNation human='/src/imgs/characters/noire_normal.png' megami='/src/imgs/characters/noire_megami.png'>
+            <CharacterNation human='/src/imgs/characters/vert_normal.png' megami='/src/imgs/characters/vert_megami.png'>
                 <div slot="normal-description" class=" text-balance text-lg">
-                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Noire</h1>
+                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Vert</h1>
                     <p>Este personaje es la personificación de la consola <em>PlayStation 2</em> de aquella época.</p>
                     <p> Ella es la guardiana y protectora de Lastation, quien es una de las protagonistas de la saga junto a Neptune y las demás. </p>
                     <p>Es sumamente conocida por ser un personaje muy dedicado a su nación y cuya personalidad podría considerarse <em>tsundere</em>.</p> 
                     <p>A pesar que existen distintas versiones de este personaje en cada una de las líneas alternas que trata la saga, su actitud en cada una de estas versiones no cambia</p>
                 </div>
                 <div slot="megami-description" class="text-balance text-lg">
-                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Black Heart</h1>
+                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Green Heart</h1>
                     <p>Tranformación <em>Console Patron Unit</em> (CPU) de Noire. Al adoptar esta forma, podremos notar que lleva los colores más significactivos de la consola a la que representa; su personalidad no cambia con respecto a las otras diosas.</p>
                     <p>La personalidad de Noire cuando  entra en este modo es muy similar a su forma humana, sin embargo, se vuelve mucho más copetitiva y energética que antes.</p>
-                </div>
-            </CharacterNation>
-        </article>
-    </section>
-    <br>
-    <section class="bg-black bg-opacity-30 shadow-top text-gray-200 mt-2 p-3">
-        <article class=" max-w-6xl m-auto">
-            <h1 class="my-2 border-b border-cyan-600 text-3xl text-cyan-600">Candidato a guardián</h1>
-            <CharacterNation human='/src/imgs/characters/uni_normal.png' megami='/src/imgs/characters/uni_megami.png'>
-                <div slot="normal-description" class=" text-balance text-lg">
-                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Uni</h1>
-                    <p>Es la hermana menor de Noire y una de las mejores amigas de Nepgear.Al igual que su hermana, ella representa a la consola <em>Playstation VITA.</em></p>
-                    <p> Uni tiene un carácter similar al de su hermana, pero con la diferencia de ser un poco más infantil y muy dedicada a ayudar a su hermana.</p> 
-                    <p>A pesar de ser una <em>canditata a diosa</em>, su rol en la nación es muy similar al de su hermana. Junto con ella, trabajan juntas para mantener la paz y el orden en la nación.</p>
-                </div>
-                <div slot="megami-description" class="text-balance text-lg">
-                    <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Black Sister</h1>
-                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Uni. Al igual que el resto de diosas, ella obtiene los colores más distintivos a la consola que representa, esto son muy similares a los que obtiene Noire.</p>
-                    <p>A diferencia de su hermana, cuando Uni se encuentra en esta forma su personalidad no cambia en lo absoluto.</p>
-                    <p>A pesar de su actitud tsundere, se preocupa mucho por los ciudadanos de Lastation, así como tambien ve por el bienestar de sus amigos.</p>
                 </div>
             </CharacterNation>
         </article>
