descripcion de personajes listo

--- a/src/pages/world/Leambox.astro
+++ b/src/pages/world/Leambox.astro
@@ -12,8 +12,8 @@ import NationLayout from "../../layouts/NationLayout.astro";
     <section class="bg-black bg-opacity-30 shadow-top text-gray-300 p-3">
         <article class="max-w-6xl m-auto">
             <div class="m-auto text-lg text-pretty px-2 sm:px-6 py-4 sm:py-8">
-                <p>Lastation, una de las cuatro naciones principales ubucada al este de GameDustry.Esta nación destaca principalmente por su avanzada tecnología en la industria y en la seguridad que esta proporciona a sus habitantes. Esto puede dar a entender que esta nación es sumamente estricta, sin embargo, no lo es.</p>
-                <p>Su guardian <em>Black Heart</em> a pesar de tener un acaracter muy energético y desafiante, se preocupa por sus habitantes y ahce todo lo posible para mantener el orden y la paz para sus ciudadanos.</p>
+                <p>Lastation, una de las cuatro naciones principales ubucada al sur de GameDustry.Esta nación destaca principalmente por su avanzada tecnología en el apartado del entretenimiento. A pesar de ser una gran bnación, esta no cuenta con un <em>candidato a guardián.</em></p>
+                <p>Su guardian <em>Green Heart</em> en una de las única de las diosas cuya personalidad es sumamente madura y refinada. Gracias a su razonamiento de una persona adulta, toma las mejores decisiones para llevar a su nación hacia adelante.</p>
             </div>
         </article>
     </section>
@@ -24,15 +24,13 @@ import NationLayout from "../../layouts/NationLayout.astro";
             <CharacterNation human='/src/imgs/characters/vert_normal.png' megami='/src/imgs/characters/vert_megami.png'>
                 <div slot="normal-description" class=" text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Vert</h1>
-                    <p>Este personaje es la personificación de la consola <em>PlayStation 2</em> de aquella época.</p>
-                    <p> Ella es la guardiana y protectora de Lastation, quien es una de las protagonistas de la saga junto a Neptune y las demás. </p>
-                    <p>Es sumamente conocida por ser un personaje muy dedicado a su nación y cuya personalidad podría considerarse <em>tsundere</em>.</p> 
-                    <p>A pesar que existen distintas versiones de este personaje en cada una de las líneas alternas que trata la saga, su actitud en cada una de estas versiones no cambia</p>
+                    <p>Este personaje es la personificación de la consola <em>Xbox</em> de aquella época.</p>
+                    <p> Ella es la guardiana y protectora de Leambox, quien es una de las protagonistas de la saga junto a Neptune y las demás. </p>
+                    <p>La perosnalidad de este personaje es muy peculiar, ya que es sumamente educada con todos; sin embargo, cuando se encuentra sola su actitud cambia radicalmente, volviendose prácticamente una otaku fanática de lo videojuegos y del contenido <em>BL</em>.</p>
                 </div>
                 <div slot="megami-description" class="text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Green Heart</h1>
-                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Noire. Al adoptar esta forma, podremos notar que lleva los colores más significactivos de la consola a la que representa; su personalidad no cambia con respecto a las otras diosas.</p>
-                    <p>La personalidad de Noire cuando  entra en este modo es muy similar a su forma humana, sin embargo, se vuelve mucho más copetitiva y energética que antes.</p>
+                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Vert. Al adoptar esta forma, podremos notar que lleva los colores más significactivos de la consola a la que representa; su personalidad no cambia mucho con repecto a su forma humana. Sin embargo, sigue manteniendo su actitud de otaku.</p>
                 </div>
             </CharacterNation>
         </article>
