--- a/src/pages/world/Lowee.astro
+++ b/src/pages/world/Lowee.astro
@@ -12,8 +12,8 @@ import NationLayout from "../../layouts/NationLayout.astro";
     <section class="bg-black bg-opacity-30 shadow-top text-gray-300 p-3">
         <article class="max-w-6xl m-auto">
             <div class="m-auto text-lg text-pretty px-2 sm:px-6 py-4 sm:py-8">
-                <p>Lastation, una de las cuatro naciones principales ubucada al este de GameDustry.Esta nación destaca principalmente por su avanzada tecnología en la industria y en la seguridad que esta proporciona a sus habitantes. Esto puede dar a entender que esta nación es sumamente estricta, sin embargo, no lo es.</p>
-                <p>Su guardian <em>Black Heart</em> a pesar de tener un acaracter muy energético y desafiante, se preocupa por sus habitantes y ahce todo lo posible para mantener el orden y la paz para sus ciudadanos.</p>
+                <p>Lowee, una de las cuatro naciones principales ubucada al norte de GameDustry.Esta nación, debido a su posición geográfica se encuentra cubierta totalmente por nieve. De igual manera, a pesar de estar avanzada tecnológicamente, esta nación destaca principalmente por su rica cultura.</p>
+                <p>Su guardian <em>White Heart</em> se toma muy en serio su rol como guardián de la nacion, por lo que, en ocasiones puede ser un poco dura con quienes la rodean.</p>
             </div>
         </article>
     </section>
@@ -24,15 +24,14 @@ import NationLayout from "../../layouts/NationLayout.astro";
             <CharacterNation human='/src/imgs/characters/blanc_normal.png' megami='/src/imgs/characters/blanc_megami.png'>
                 <div slot="normal-description" class=" text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Blanc</h1>
-                    <p>Este personaje es la personificación de la consola <em>PlayStation 2</em> de aquella época.</p>
-                    <p> Ella es la guardiana y protectora de Lastation, quien es una de las protagonistas de la saga junto a Neptune y las demás. </p>
-                    <p>Es sumamente conocida por ser un personaje muy dedicado a su nación y cuya personalidad podría considerarse <em>tsundere</em>.</p> 
-                    <p>A pesar que existen distintas versiones de este personaje en cada una de las líneas alternas que trata la saga, su actitud en cada una de estas versiones no cambia</p>
+                    <p>Este personaje es la personificación de la consola <em>Wii</em> que existió en su tiempo por parte de Nintendo.</p>
+                    <p>Blanc es la más calmada de las cuatro protagonistas de la saga.  A ella le fascina leer novelas, sin embargo, su verdadera pasión se centra en escribir sus propias hsitorias.</p>
+                    <p>Como se dijo anteriormente, su actitud es bastante tranquila, sin embargo, en caso de llegarse a enojar, se vuelve sumamente agresiva.</p>
                 </div>
                 <div slot="megami-description" class="text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">White Heart</h1>
-                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Noire. Al adoptar esta forma, podremos notar que lleva los colores más significactivos de la consola a la que representa; su personalidad no cambia con respecto a las otras diosas.</p>
-                    <p>La personalidad de Noire cuando  entra en este modo es muy similar a su forma humana, sin embargo, se vuelve mucho más copetitiva y energética que antes.</p>
+                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Blanc. Al adoptar esta forma, podremos notar que lleva los colores más significactivos de la consola a la que representa.</p>
+                    <p>La personalidad de Blanc al adoptar esta forma cambia notoriamente. Se vuelve muy agresiva y adquiere una fuerza y  energía descomunal. Sin embargo, hace todo lo posible por proteger a su nación y a sus hermanas.</p>
                 </div>
             </CharacterNation>
         </article>
@@ -44,29 +43,26 @@ import NationLayout from "../../layouts/NationLayout.astro";
             <CharacterNation human='/src/imgs/characters/rom_normal.png' megami='/src/imgs/characters/rom_megami.png'>
                 <div slot="normal-description" class=" text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Rom</h1>
-                    <p>Es la hermana menor de Noire y una de las mejores amigas de Nepgear.Al igual que su hermana, ella representa a la consola <em>Playstation VITA.</em></p>
-                    <p> Uni tiene un carácter similar al de su hermana, pero con la diferencia de ser un poco más infantil y muy dedicada a ayudar a su hermana.</p> 
-                    <p>A pesar de ser una <em>canditata a diosa</em>, su rol en la nación es muy similar al de su hermana. Junto con ella, trabajan juntas para mantener la paz y el orden en la nación.</p>
+                    <p>Es la hermana menor de Blanc junto con su hermana Rem y una de las amigas de Nepgear.Al igual que su hermana, ella junto con Rem representa a la consola <em>NintendoDS.</em></p>
+                    <p> Rom es una niña bastante alegre y amable con lagente, sin embargo, es muy  timida, por lo que siempre se encuentra junto con su hermana Rem.</p> 
+                    <p>Debido a su forma de ser, los ciudadanos de Lowee la ven como a alguien que deben de proteger.</p>
                 </div>
                 <div slot="megami-description" class="text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">White Sister</h1>
-                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Uni. Al igual que el resto de diosas, ella obtiene los colores más distintivos a la consola que representa, esto son muy similares a los que obtiene Noire.</p>
-                    <p>A diferencia de su hermana, cuando Uni se encuentra en esta forma su personalidad no cambia en lo absoluto.</p>
-                    <p>A pesar de su actitud tsundere, se preocupa mucho por los ciudadanos de Lastation, así como tambien ve por el bienestar de sus amigos.</p>
+                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Rom. Al igual que el resto de diosas, ella obtiene los colores más distintivos a la consola que representa.</p>
+                    <p>Cuando Rom adquiere esta forma se vuelve mucho más independiente y adquiere una gran fuerza.</p>
                 </div>
             </CharacterNation>
             <CharacterNation human='/src/imgs/characters/ram_normal.png' megami='/src/imgs/characters/ram_megami.png'>
                 <div slot="normal-description" class=" text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">Ram</h1>
-                    <p>Es la hermana menor de Noire y una de las mejores amigas de Nepgear.Al igual que su hermana, ella representa a la consola <em>Playstation VITA.</em></p>
-                    <p> Uni tiene un carácter similar al de su hermana, pero con la diferencia de ser un poco más infantil y muy dedicada a ayudar a su hermana.</p> 
-                    <p>A pesar de ser una <em>canditata a diosa</em>, su rol en la nación es muy similar al de su hermana. Junto con ella, trabajan juntas para mantener la paz y el orden en la nación.</p>
+                    <p>Es la hermana menor de Blanc junto con su hermana Rom y una de las amigas de Nepgear.Al igual que su hermana, ella junto con Rom representa a la consola <em>NintendoDS.</em></p>
+                    <p>Ram podría considerarse la contraparte de Rom, ya que ella es una niña muy energética y alegre, por lo que en ocasiones puede meterse en problemas ya que le gusta hacerle travesuras a su hermana mayor Blanc.</p> 
                 </div>
                 <div slot="megami-description" class="text-balance text-lg">
                     <h1 class="font-semibold text-2xl border-b py-2 my-2 text-cyan-300">White Sister</h1>
-                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Uni. Al igual que el resto de diosas, ella obtiene los colores más distintivos a la consola que representa, esto son muy similares a los que obtiene Noire.</p>
-                    <p>A diferencia de su hermana, cuando Uni se encuentra en esta forma su personalidad no cambia en lo absoluto.</p>
-                    <p>A pesar de su actitud tsundere, se preocupa mucho por los ciudadanos de Lastation, así como tambien ve por el bienestar de sus amigos.</p>
+                    <p>Tranformación <em>Console Patron Unit</em> (CPU) de Ram. Al igual que el resto de diosas, ella obtiene los colores más distintivos a la consola que representa.</p>
+                    <p>Cuando Rom adquiere esta forma se vuelve adquiere una actitud un opoco más madura con respecto a   su forma humana.</p>
                 </div>
             </CharacterNation>
         </article>
