--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,7 +129,13 @@ import Nation from '../components/Nation.astro';
 				</div>
 			</Card>
 		</div>
+		<div class="flex justify-center items-center">
+			<a href="games" class="px-2 py-1 rounded-full border bg-blue-900 text-blue-100">
+				<span>Ver más</span>
+			</a>
+		</div>
 	</Seccion>
+	<br>
 </Layout>
 <style>
 	html{
