--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,9 +5,10 @@ interface Props {
 }
 
 const {title,cover } = Astro.props;
+const tiempo = (Math.random() * 0.2+0.3).toFixed(1) + 's';
 ---
 
-<div class="relative block max-w-80 rounded-lg overflow-hidden border-2 border-blue-900">
+<div class="animacion relative block max-w-80 rounded-lg overflow-hidden border-2 border-blue-900">
 	<figure class="w-full">
 		<img src={cover} alt="entrega" class="w-full">
 	</figure>
@@ -16,8 +17,26 @@ const {title,cover } = Astro.props;
 		<slot/>
 	</div>
 </div>
-<style>
+<style define:vars={{tiempo}}>
 	div:hover > div{
 		top: 0;
+	}
+	.animacion{
+		animation-name: zoomIn;
+		animation-duration: var(--tiempo);
+	}
+	@keyframes zoomIn{
+		0%{
+			transform: scale(0);
+		}
+		50%{
+			transform: scale(1);
+		}
+		70%{
+			transform: scale(0.7);
+		}
+		100%{
+			transform: scale(1);
+		}
 	}
 </style>
