--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Nation from '../components/Nation.astro';
 			<figure class=" max-w-sm">
 				<img src="/src/imgs/logo.png" alt="Logo Neptunia" class="w-full" alt="logo Neptunia">
 			</figure>
-			<div class=" max-w-lg px-2 sm:px-0 text-lg">
+			<div class="max-w-lg px-2 sm:px-0 text-lg text-balance">
 				<p>
 					<strong><em>"Hyperdimension Neptunia"</em></strong> es una serie de videojuegos desarrollado por CompileHearth e IdeaFactory.
 				</p>
@@ -30,7 +30,7 @@ import Nation from '../components/Nation.astro';
 	</Parallax>
 	<Seccion ancla='Saga' title='Sobre la saga'>
 		<div class="px-3 pt-3 pb-4 flex gap-2 items-center flex-col-reverse sm:flex-row rounded-b-lg bg-violet-900 bg-opacity-70 text-violet-100">
-			<div class="section-content text-lg flex flex-col gap-2">
+			<div class="section-content text-lg flex flex-col gap-2 text-balance">
 				<p>
 					<strong><em>"Hyperdimension Neptunia"</em></strong> es una serie de videojuegos desarrollado por CompileHearth e IdeaFactory.
 				</p>
@@ -70,60 +70,60 @@ import Nation from '../components/Nation.astro';
 					<a href="https://store.steampowered.com/app/282900/Hyperdimension_Neptunia_ReBirth1/" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://neptunia.fandom.com/wiki/Hyperdimension_Neptunia_Re;Birth1" target="_blank">
 						<PsVita clases="size-12"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://store.playstation.com/es-mx/product/UP0031-PPSA02721_00-NEPREVERSEGAME01" target="_blank">
 						<Play4 clases="size-10"/>
 					</a>
 				</div>
 			</Card>
 			<Card title='Hyperdimension Neptunia Re;Bith 2' cover='/src/imgs/games/HNR2.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
-					<a href="" target="_blank">
+					<a href="https://store.steampowered.com/app/351710/Hyperdimension_Neptunia_ReBirth2_Sisters_Generation/" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://neptunia.fandom.com/wiki/Hyperdimension_Neptunia_Re;Birth2_SISTERS_GENERATION" target="_blank">
 						<PsVita clases="size-12"/>
 					</a>
 				</div>
 			</Card>
 			<Card title='Hyperdimension Neptunia Re;Bith 3' cover='/src/imgs/games/HNR3.png''>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
-					<a href="" target="_blank">
+					<a href="https://store.steampowered.com/app/353270/Hyperdimension_Neptunia_ReBirth3_V_Generation/" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://neptunia.fandom.com/wiki/Hyperdimension_Neptunia_Re;Birth3:_V_Generation" target="_blank">
 						<PsVita clases="size-12"/>
 					</a>
 				</div>
 			</Card>
 			<Card title='Megadimension Neptunia VII' cover='/src/imgs/games/HNRVII.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
-					<a href="" target="_blank">
+					<a href="https://store.steampowered.com/app/460120/Megadimension_Neptunia_VII/" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://store.playstation.com/es-ar/product/UP0031-CUSA03133_00-GAME000000000000" target="_blank">
 						<Play4 clases="size-10"/>
 					</a>
 				</div>
 			</Card>
 			<Card title='Megatagmension + Neptune: Blanc VS Zombies' cover='/src/imgs/games/MTNBNZ.png'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
-					<a href="" target="_blank">
+					<a href="https://store.steampowered.com/app/496810/MegaTagmension_Blanc__Neptune_VS_Zombies_Neptunia/?l=spanish" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://neptunia.fandom.com/wiki/MegaTagmension_Blanc_%2B_Neptune_VS_Zombies" target="_blank">
 						<PsVita clases="size-12"/>
 					</a>
 				</div>
 			</Card>
 			<Card title='Cyberdimension: Four Goddesses Online' cover='/src/imgs/games/CYBERN.jpg'>
 				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
-					<a href="" target="_blank">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
 						<Steam clases="size-8"/>
 					</a>
-					<a href="" target="_blank">
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
 						<Play4 clases="size-10"/>
 					</a>
 				</div>
