página de mundo comenzada

--- a/src/components/LinksContainer.astro
+++ b/src/components/LinksContainer.astro
@@ -11,7 +11,7 @@ import Menu from "../icons/menu.astro"
         <NavElement href="/" title="Inicio"/>
         <NavElement href="#Saga" title="Saga"/>
         <NavElement href="#Personajes" title="Personajes"/>
-        <NavElement href="#Naciones" title="Naciones"/>
+        <NavElement href="/world/" title="Naciones"/>
         <NavElement href="#Juegos" title="Juegos"/>
     </ul>
 </div>
