--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -94,6 +94,77 @@ import Play4 from '../icons/Play4.astro';
 					</a>
 				</div>
 			</Card>
+			<!-- ACTUALIZAR LINKS -->
+			<Card title='Hyperdimension Neptunia Producing Perfection' cover='/src/imgs/games/PP.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Hyperdimension Neptunia U: Action Unlashed' cover='/src/imgs/games/U_ACTION.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Superdimensión Neptunia RPG' cover='/src/imgs/games/RPG.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Hyperdimension Neptunia Re:Verse' cover='/src/imgs/games/RE_VERSE.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Neptunia Ninja Wars' cover='/src/imgs/games/NINJA.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Neptunia Sisters VS Sisters' cover='/src/imgs/games/SISTERS.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
+			<Card title='Neptunia Game Maker R:Evolution' cover='/src/imgs/games/MAKER.png'>
+				<div class="w-full flex justify-evenly sm:justify-center gap-4 items-center">
+					<a href="https://store.steampowered.com/app/632350/Cyberdimension_Neptunia_4_Goddesses_Online/" target="_blank">
+						<Steam clases="size-8"/>
+					</a>
+					<a href="https://store.playstation.com/es-mx/product/UP0031-CUSA07960_00-CYONMEGAMIONLINE" target="_blank">
+						<Play4 clases="size-10"/>
+					</a>
+				</div>
+			</Card>
         </div>
     </section>
 </Layout>
